--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    font-family: Helvetica;
+    font-family: Arial, sans-serif;
     background-color: #f5f5f5;
-    padding: 5px;
+    padding: 20px;
 }
 
 h1, h2 {
@@ -9,7 +9,7 @@ h1, h2 {
 }
 
 form {
-    margin-bottom: 3px;
+    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     max-width: 400px;
@@ -20,14 +20,14 @@ label {
 }
 
 input {
-    margin-bottom: 3px; /* Diminuindo o espaço entre os campos de entrada */
+    margin-bottom: 5px; /* Diminuindo o espaço entre os campos de entrada */
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
 button {
-    padding: 5px 5px;
+    padding: 10px 15px;
     border: none;
     background-color: #4CAF50;
     color: white;
@@ -42,14 +42,14 @@ button:hover {
 }
 
 #ambientesContainer {
-    margin-top: 5px;
+    margin-top: 20px;
 }
 
 .ambiente {
     background-color: #fff;
     padding: 10px;
     border: 1px solid #ccc;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     border-radius: 4px;
 }
 
